--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,11 @@ body {
     margin-left: auto;
 }
 
+/* Force Next button to the right when Previous button is hidden */
+#nextBtn {
+    margin-left: auto !important;
+}
+
 .btn {
     padding: 15px 30px;
     border: none;
